<resources>
    <string name="app_name" translatable="false">Cool Timer</string>
    <string name="start_stop_button_start_text">Start</string>
    <string name="start_stop_button_stop_text">Stop</string>
    <string name="action_settings_title">Settings</string>
    <string name="enable_sound_preference_title">Enable sound</string>
    <string name="enable_sound_preference_summary_on">Sound enabled</string>
    <string name="enable_sound_preference_summary_off">Sound disabled</string>
    <string name="timer_melody_preference_title">Timer melody</string>
    <string name="default_interval_preference_title">Default interval</string>
    <string name="default_interval_string_not_integer_number_error_message">Please enter an integer number!</string>
</resources>